# AuEPIR

./: README.md  fig1_data.csv  run_dis.sh  run_fastpir.sh  run_fig1_experiment.sh  run_optimal.sh  run_seal.sh  server_output.tmp  set_proxy.sh
dependencies/: FetchSeal.cmake  FetchSealPIR.cmake
dependencies/patches/: pir_server.cpp  src_CMakeLists.txt
example/: benchmark_config.json  pir_configs.json  pir_configs.json.save
src/: .C.swp  CMakeLists.txt  check_seal_params.cpp  main.cpp  main_fastpir.cpp  server.cpp  worker.cpp  worker_benchmark.cpp
src/internals/protos/: distribicom.proto
src/marshal/: marshal.hpp
src/math_utils/: evaluator_wrapper.cpp  matrix_operations.cpp  matrix_operations.hpp  matrix_operations.tpp  query_expander.cpp
src/services/: CMakeLists.txt  authenticator.cpp  authenticator.hpp  client_context.hpp  constants.hpp  crypto_utils.cpp  crypto_utils.hpp  db.hpp  factory.cpp  factory.hpp  manager.cpp  manager.hpp  manager_workstream.cpp  manager_workstream.hpp  sender_interface.hpp  server.cpp  server.hpp  shared_memory_transport.hpp  utils.cpp  worker.cpp  worker.hpp  worker_strategy.cpp  worker_strategy.hpp  zmq_manager.hpp  zmq_workstream.hpp
test/: test.cpp
test/services/: worker_test.cpp
